[tool.poetry]
name = "lc-parser"
version = "0.1.0"
description = ""
authors = ["Abastien1734 <adbastien734@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
